--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
-  <head>
-<title>RippleMap</title>
-</head>
-<body>
-<h1>RRippleMap</h1>
 
-<address>
-<a href="mailto:dann@sherpa.local">dann toliver</a>
-</address>
-</body>
+    <head>
+        <title>RippleMap</title>
+    </head>
+
+    <body>
+        <h1>RippleMap</h1>
+    </body>
+
 </html>
