--- a/amc-form.html
+++ b/amc-form.html
@@ -1,4 +1,4 @@
-<form action="http://sherpa.local:8888" method="post" accept-charset="utf-8">
+<form action="http://ripplemap.io:8888" method="post" accept-charset="utf-8">
   <label for="pancakes">pancakes</label><input type="text" name="pancakes" value="" id="pancakes">
 
   <p><input type="submit" value="Continue &rarr;"></p>
