--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
-
-    <head>
-        <title>RippleMap</title>
-    </head>
-
-    <body>
-        <h1>RippleMap</h1>
-    </body>
-
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>RippleMap</title>
+</head>
+<body>
+  <h1>Ripple Mapping Tool</h1>
+  <h2>Coming soon!</h2>
+</body>
 </html>
