better thank you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -1,1 +1,12 @@
-Thanks!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>RippleMap</title>
+</head>
+<body>
+  <h1>Ripple Mapping Tool</h1>
+  <h2>Thank you for helping the AMC!</h2>
+</body>
+</html>
