fixing form enctype

--- a/amc-form.html
+++ b/amc-form.html
@@ -34,7 +34,7 @@
         </header>
         <p class="lead">We are creating a giant interactive map of the many impacts that ripple from the AMC. Please help us by filling out this form or visit www.ripplemap.io/amc-form. As a thank you, we will enter your name in a raffle for a complimentary registration to AMC2016. The winners will be announced at the closing ceremony on Sunday.</p>
         <p>Have you connected with anyone through the AMC who...</p>
-        <form action="http://ripplemap.io:8888" method="post" id="" name="" class="form-vertical" novalidate="" accept-charset="UTF-8" enctype="multipart/form-data">
+        <form action="http://ripplemap.io:8888" method="post" id="" name="" class="form-vertical" novalidate="" accept-charset="UTF-8">
 
 
           <!-- question -->
