--- a/amc-form.html
+++ b/amc-form.html
@@ -90,7 +90,7 @@
           </div>
           <p>Thank you! ♥♥♥</p>
 
-
+<input type="submit" name="submit" value="" id="submit">
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
       </div>
