--- a/amc-form.html
+++ b/amc-form.html
@@ -42,11 +42,11 @@
             <p>You collaborated with on a project or campaign?</p>
             <div class="form-group">
               <label for="" class="form-label">Who?</label>
-              <input type="text" class="form-control">
+              <input type="text" name="collaborated-who" class="form-control">
             </div>
             <div class="form-group">
               <label for="" class="form-label">What was it?</label>
-              <textarea class="form-control"></textarea>
+              <textarea class="form-control" name="collaborated-what"></textarea>
             </div>
           </div>
           <!-- /question -->
@@ -55,7 +55,7 @@
             <label for="" class="form-label">
               What is your name?
             </label>
-            <input type="text" class="form-control">
+            <input type="text" name="name" class="form-control">
           </div>
 
 
@@ -65,12 +65,12 @@
 
             <label for="" class="form-label col-md-4">Email</label>
             <div class="col-md-8">
-              <input type="text" class="form-control">
+              <input type="text" name="email" class="form-control">
             </div>
 
             <label for="" class="form-label col-md-4">Phone</label>
             <div class="col-md-8">
-              <input type="text" class="form-control">
+              <input type="text" name="phone" class="form-control">
             </div>
           </div>
           <div class="form-group">
@@ -79,18 +79,17 @@
 
             <div class="checkbox">
               <label>
-                <input type="checkbox"> Email
+                <input type="checkbox" name="email-ok"> Email
               </label>
             </div>
             <div class="checkbox">
               <label>
-                <input type="checkbox"> Phone
+                <input type="checkbox" name="phone-ok"> Phone
               </label>
             </div>
           </div>
           <p>Thank you! ♥♥♥</p>
 
-<input type="submit" name="submit" value="" id="submit">
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
       </div>
