--- a/amc-form.html
+++ b/amc-form.html
@@ -51,6 +51,76 @@
           </div>
           <!-- /question -->
 
+          <!-- question -->
+          <div class="question">
+            <p>Introduced you to a new tool or idea?</p>
+            <div class="form-group">
+              <label for="" class="form-label">Who?</label>
+              <input type="text" name="introduced-who" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="" class="form-label">What was it?</label>
+              <textarea class="form-control" name="introduced-what"></textarea>
+            </div>
+          </div>
+          <!-- /question -->
+
+          <!-- question -->
+          <div class="question">
+            <p>Connected you with a contract or job opportunity?</p>
+            <div class="form-group">
+              <label for="" class="form-label">Who?</label>
+              <input type="text" name="job-who" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="" class="form-label">What was it?</label>
+              <textarea class="form-control" name="job-what"></textarea>
+            </div>
+          </div>
+          <!-- /question -->
+
+          <!-- question -->
+          <div class="question">
+            <p>You co-founded a new organization/collective with?</p>
+            <div class="form-group">
+              <label for="" class="form-label">Who?</label>
+              <input type="text" name="cofounded-who" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="" class="form-label">What was it?</label>
+              <textarea class="form-control" name="cofounded-what"></textarea>
+            </div>
+          </div>
+          <!-- /question -->
+
+          <!-- question -->
+          <div class="question">
+            <p>Connected you to a new community?</p>
+            <div class="form-group">
+              <label for="" class="form-label">Who?</label>
+              <input type="text" name="community-who" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="" class="form-label">What was it?</label>
+              <textarea class="form-control" name="community-what"></textarea>
+            </div>
+          </div>
+          <!-- /question -->
+
+          <!-- question -->
+          <div class="question">
+            <p>Changed your life in any other way?</p>
+            <div class="form-group">
+              <label for="" class="form-label">Who?</label>
+              <input type="text" name="life-who" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="" class="form-label">What was it?</label>
+              <textarea class="form-control" name="life-what"></textarea>
+            </div>
+          </div>
+          <!-- /question -->
+
           <div class="form-group">
             <label for="" class="form-label">
               What is your name?
