--- a/amc-form.html
+++ b/amc-form.html
@@ -10,30 +10,26 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="styles/30224166.main.css">
+  <link rel="stylesheet" href="styles/467d9426.main.css">
   <script src="scripts/vendor/7d72bbd1.modernizr.js"></script>
 </head>
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-6 col-md-offset-3">
         <header>
-          <div class="wrapper">
-            <div class="cell">
-              <div class="row">
-                <div class="col-md-4">
-                  <a href="/"><img src="/images/3aa7a079.amc_logo.png" alt="Allied Media Conference Logo" class="img-responsive"></a>
-                </div>
-                <div class="col-md-8">
-                  <h1>Help map the ripple effect of the Allied Media Conference!</h1>
-                </div>
-              </div>
+          <div class="row">
+            <div class="col-md-4">
+              <a href="/"><img src="/images/3aa7a079.amc_logo.png" alt="Allied Media Conference Logo" class="img-responsive logo"></a>
+            </div>
+            <div class="col-md-8">
+              <h1>Help map the ripple effect of the Allied Media Conference!</h1>
             </div>
           </div>
         </header>
-        <p class="lead">We are creating a giant interactive map of the many impacts that ripple from the AMC. Please help us by filling out this form or visit www.ripplemap.io/amc-form. As a thank you, we will enter your name in a raffle for a complimentary registration to AMC2016. The winners will be announced at the closing ceremony on Sunday.</p>
-        <p>Have you connected with anyone through the AMC who...</p>
+        <p class="lead">We are creating a giant interactive map of the many impacts that ripple from the AMC. Please help us by filling out this form. As a thank you, we will enter your name in a raffle for a complimentary registration to AMC2016. The winners will be announced at the closing ceremony on Sunday.</p>
+        <p class="med-lead">Have you connected with anyone through the AMC who...</p>
         <form action="http://ripplemap.io:8888" method="post" id="" name="" class="form-vertical">
 
 
@@ -120,48 +116,56 @@
             </div>
           </div>
           <!-- /question -->
+          <div class="question">
 
           <div class="form-group">
-            <label for="" class="form-label">
-              What is your name?
-            </label>
+            <p> What is your name? </p>
             <input type="text" name="name" class="form-control">
           </div>
+          </div>
 
-
-          <div class="form-group">
-
+          <div class="question">
             <p>How can we contact you to learn more?</p>
+            <div class="row">
+              <div class="col-md-6">
+                <label for="" class="form-label">Email</label>
 
-            <label for="" class="form-label col-md-4">Email</label>
-            <div class="col-md-8">
-              <input type="text" name="email" class="form-control">
-            </div>
+                <input type="text" name="email" class="form-control">
+              </div>
+              <div class="col-md-6">
 
-            <label for="" class="form-label col-md-4">Phone</label>
-            <div class="col-md-8">
-              <input type="text" name="phone" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
+                <label for="" class="form-label">Phone</label>
+                <input type="text" name="phone" class="form-control">
 
-            <p>How would you prefer to be contacted? </p>
+              </div>
 
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" name="email-ok"> Email
-              </label>
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" name="phone-ok"> Phone
-              </label>
+
             </div>
           </div>
-          <p>Thank you! ♥♥♥</p>
+          <div class="question">
+              <p>How would you prefer to be contacted? </p>
 
-          <button type="submit" class="btn btn-default">Submit</button>
+            <div class="form-group">
+
+
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="email-ok"> Email
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="phone-ok"> Phone
+                </label>
+              </div>
+            </div>
+          </div>
+          <p class="pull-right">Thank you! ♥♥♥</p>
+
+          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
         </form>
+
+
       </div>
     </div>
   </div>
@@ -172,7 +176,7 @@
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <!-- Typekit -->
-  <script src="//use.typekit.net/edz1owg.js"></script>
+  <script src="//use.typekit.net/faj0nnl.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
