--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>RippleMap</title>
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <link rel="stylesheet" href="styles/467d9426.main.css">
+  <script src="scripts/vendor/7d72bbd1.modernizr.js"></script>
 </head>
 <body>
-  <h1>Ripple Mapping Tool</h1>
-  <h2>Coming soon!</h2>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <header>
+          <div class="wrapper">
+            <div class="cell">
+              <div class="row">
+                <div class="col-md-4">
+                  <a href="/"><img src="/images/3aa7a079.amc_logo.png" alt="Allied Media Conference Logo" class="img-responsive"></a>
+                </div>
+                <div class="col-md-8">
+                  <h1>Help map the ripple effect of the Allied Media Conference!</h1>
+                  <p>Coming soon!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </header>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <p>&copy; 2015 AMC</p>
+  </footer>
+  <!--[if lt IE 7]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+  <!-- Typekit -->
+  <script src="//use.typekit.net/faj0nnl.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
