Update thank you copy

--- a/thank-you.html
+++ b/thank-you.html
@@ -26,8 +26,7 @@
                   <a href="/"><img src="/images/3aa7a079.amc_logo.png" alt="Allied Media Conference Logo" class="img-responsive"></a>
                 </div>
                 <div class="col-md-8">
-                  <h1>Help map the ripple effect of the Allied Media Conference!</h1>
-                  <p>Coming soon!</p>
+                  <h1>Thank you for helping map the ripple effect of the Allied Media Conference!</h1>
                 </div>
               </div>
             </div>
