--- a/webcola/ripplemap.html
+++ b/webcola/ripplemap.html
@@ -41,7 +41,12 @@
     <script src="../cola.js"></script>
     <link rel="stylesheet" href="../extern/hljs/styles/github.css">
     <script src="../extern/hljs/highlight.pack.js"></script>
+
     <script src="ripplemap.js"></script>
+
+    <script>
+      d3.text("ripplemap.json", function(f) {graph_it(parse_it(f))})
+    </script>
 
   </body>
 </html>
