--- a/sketches/dagoba_rm.html
+++ b/sketches/dagoba_rm.html
@@ -54,6 +54,8 @@
 
     <pre id="graph"></pre>
 
+    <canvas id="springydemo" width="640" height="480" />
+
     <script type="text/javascript" src="ripplemap.js"></script>
 
   </body>
