--- a/sketches/dagoba_rm.html
+++ b/sketches/dagoba_rm.html
@@ -10,16 +10,9 @@
     <script src="http://dn.ht/springy/springyui.js"></script>
 
 
-    <script src="/~dann/vendor/WebCola/WebCola/extern/d3.v3.js"></script>
-    <script src="/~dann/vendor/WebCola/WebCola/cola.js"></script>
-    <link rel="stylesheet" href="/~dann/vendor/WebCola/WebCola/extern/hljs/styles/github.css">
-    <script src="/~dann/vendor/WebCola/WebCola/extern/hljs/highlight.pack.js"></script>
-    <script src="/~dann/vendor/WebCola/WebCola/examples/ripplemap.js"></script>
-
-
 
     <style type="text/css">
-      @import url(../style.css);
+      @import url(/~dann/vendor/WebCola/WebCola/style.css);
       .background {
         stroke: white;
         stroke-width: 1px;
@@ -55,6 +48,14 @@
     <pre id="graph"></pre>
 
     <canvas id="springydemo" width="640" height="480" />
+
+
+
+    <script src="/~dann/vendor/WebCola/WebCola/extern/d3.v3.js"></script>
+    <script src="/~dann/vendor/WebCola/WebCola/cola.js"></script>
+    <link rel="stylesheet" href="/~dann/vendor/WebCola/WebCola/extern/hljs/styles/github.css">
+    <script src="/~dann/vendor/WebCola/WebCola/extern/hljs/highlight.pack.js"></script>
+    <script src="/~dann/vendor/WebCola/WebCola/examples/ripplemap.js"></script>
 
     <script type="text/javascript" src="ripplemap.js"></script>
 
