better rendering; editing stubs; general awesomeness

--- a/sketches/dagoba_rm.html
+++ b/sketches/dagoba_rm.html
@@ -45,7 +45,12 @@
   </head>
   <body>
 
-    <pre id="graph"></pre>
+    <pre id="graph" style="display:none"></pre>
+
+    <textarea cols="30" id="nodes_ta" name="nodes_ta" rows="10"></textarea>
+    <textarea cols="30" id="edges_ta" name="edges_ta" rows="10"></textarea>
+
+    <button id="save">Save</button>
 
     <canvas id="springydemo" width="640" height="480" />
 
