--- a/sketches/dagoba_rm.html
+++ b/sketches/dagoba_rm.html
@@ -3,11 +3,11 @@
   <head>
     <title>Dagoba</title>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="../build/dagoba.js"></script>
+    <script type="text/javascript" src="../dagoba.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script src="http://dn.ht/springy/springy.js"></script>
-    <script src="http://dn.ht/springy/springyui.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/springy.js"></script>
+    <script src="js/springyui.js"></script>
 
 
 
@@ -41,6 +41,14 @@
         text-anchor: middle;
         cursor: move;
       }
+
+      svg {
+        border: 1px solid black;
+      }
+
+      canvas {
+        border: 1px solid black;
+      }
     </style>
   </head>
   <body>
@@ -56,11 +64,11 @@
 
 
 
-    <script src="/~dann/vendor/WebCola/WebCola/extern/d3.v3.js"></script>
-    <script src="/~dann/vendor/WebCola/WebCola/cola.js"></script>
+    <script src="js/d3.v3.js"></script>
+    <script src="js/cola.js"></script>
     <link rel="stylesheet" href="/~dann/vendor/WebCola/WebCola/extern/hljs/styles/github.css">
-    <script src="/~dann/vendor/WebCola/WebCola/extern/hljs/highlight.pack.js"></script>
-    <script src="/~dann/vendor/WebCola/WebCola/examples/ripplemap.js"></script>
+    <script src="js/highlight.pack.js"></script>
+    <script src="js/ripplemap.js"></script>
 
     <script type="text/javascript" src="ripplemap.js"></script>
 
