--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -3,7 +3,7 @@
   <head>
     <title>Dagoba</title>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="../dagoba.js"></script>
+    <script type="text/javascript" src="js/dagoba.js"></script>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/springy.js"></script>
