--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -58,7 +58,11 @@
 
     <button id="save">Save</button>
 
-    <canvas id="springydemo" width="640" height="480" />
+    <canvas id="ripples" width="900" height="900"></canvas>
+
+
+
+    <canvas id="springydemo" width="640" height="480"></canvas>
 
 
 
