--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -51,18 +51,28 @@
   </head>
   <body>
 
-    <pre id="graph" style="display:none"></pre>
+    <!--     <pre id="graph" style="display:none"></pre> -->
 
-    <textarea cols="30" id="nodes_ta" name="nodes_ta" rows="10"></textarea>
-    <textarea cols="30" id="edges_ta" name="edges_ta" rows="10"></textarea>
-
+    <!-- <textarea cols="30" id="nodes_ta" name="nodes_ta" rows="10"></textarea> -->
+    <!-- <textarea cols="30" id="edges_ta" name="edges_ta" rows="10"></textarea> -->
+<div style="display:none">
     <button id="save">Save</button>
+</div>
+    <h1> Welcome to ripplemapping </h1>
+
+    <p>
+      Keys: <br />
+      'p' for previous year <br />
+      'n' for next year <br />
+      'a' for all edges <br />
+      's' for some edges <br />
+    </p>
 
     <canvas id="ripples" width="900" height="900"></canvas>
 
 
 
-    <canvas id="springydemo" width="640" height="480"></canvas>
+    <!--     <canvas id="springydemo" width="640" height="480"></canvas> -->
 
 
 
