local styles; new data; better neighbors

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -10,7 +10,7 @@
     <script src="js/springyui.js"></script>
 
     <style type="text/css">
-      @import url(/~dann/vendor/WebCola/WebCola/style.css);
+      @import url(css/style.css);
       .background {
         stroke: white;
         stroke-width: 1px;
@@ -78,7 +78,7 @@
 
     <script src="js/d3.v3.js"></script>
     <script src="js/cola.js"></script>
-    <link rel="stylesheet" href="/~dann/vendor/WebCola/WebCola/extern/hljs/styles/github.css">
+    <link rel="stylesheet" href="css/github.css">
     <script src="js/highlight.pack.js"></script>
     <script src="js/ripplemap.js"></script>
 
