Display min and max current year

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -68,6 +68,16 @@
       's' for some edges <br />
     </p>
 
+    <div>
+      <p>
+        min year:
+        <span id="minyear"></span>
+        max year:
+        <span id="maxyear"></span>
+      </p>
+    </div>
+
+
     <canvas id="ripples" width="900" height="900"></canvas>
 
 
