--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -42,6 +42,32 @@
       canvas {
         border: 1px solid black;
       }
+
+      .word:active, .word:focus, .word:hover {
+        border: none;
+        outline: none;
+        background-color: #dfd;
+      }
+
+      .thing:active, .thing:focus, .thing:hover {
+        background-color: #fee;
+      }
+
+      .action:active, .action:focus, .action:hover {
+        background-color: #ffe;
+      }
+
+      .happening:active, .happening:focus, .happening:hover {
+        background-color: #fef;
+      }
+
+      .effect:active, .effect:focus, .effect:hover {
+        background-color: #eff;
+      }
+
+      .edge:active, .edge:focus, .edge:hover {
+        background-color: #eee;
+      }
     </style>
   </head>
   <body>
@@ -66,6 +92,17 @@
     </div>
 
     <canvas id="ripples" width="900" height="900"></canvas>
+
+
+    <div id="sentences">
+      <p class="sentence">
+        <span class="word thing" contentEditable="true">Mauris</span>
+        <span class="word edge" contentEditable="true">morbi</span>
+        <span class="word action" contentEditable="true">amet</span>
+        <span class="word happening" contentEditable="true">sodales</span>
+        <span class="word effect" contentEditable="true">aenean</span>
+      </p>
+    </div>
 
 
     <script type="text/javascript" src="js/dagoba.js"></script>
