--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -105,6 +105,7 @@
     </div>
 
 
+    <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/dagoba.js"></script>
     <script type="text/javascript" src="ripplemap.js"></script>
 
