removing lorem ipsum

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -94,15 +94,7 @@
     <canvas id="ripples" width="900" height="900"></canvas>
 
 
-    <div id="sentences">
-      <p class="sentence">
-        <span class="word thing" contentEditable="true">Mauris</span>
-        <span class="word edge" contentEditable="true">morbi</span>
-        <span class="word action" contentEditable="true">amet</span>
-        <span class="word happening" contentEditable="true">sodales</span>
-        <span class="word effect" contentEditable="true">aenean</span>
-      </p>
-    </div>
+    <div id="sentences"> </div>
 
 
     <script type="text/javascript" src="js/data.js"></script>
