--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Dagoba</title>
+    <title>Welcome to ripplemapping</title>
     <meta charset="UTF-8">
 
     <style type="text/css">
