basic "new sentence" form

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -96,6 +96,23 @@
 
     <div id="sentences"> </div>
 
+    <div id="newaction">
+      <p>
+        <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" /> <br />
+        <input id="thing1type" name="thing1type" type="text" value="person" /> (person, org, event, outcome, place)
+      </p>
+      <p>
+        <input id="actiontype" name="actiontype" type="text" value="manage" /> (create, attend, manage, assist, join, leave) <br />
+        <input id="actiondate" name="" type="date" value="" /> (when did it happen?)
+      </p>
+      <p>
+        <input id="thing2name" name="thing2name" type="text" value="Thing 2 name" /> <br />
+        <input id="thing2type" name="thing2type" type="text" value="person" /> (person, org, event, outcome, place)
+      </p>
+      <p>
+        <input id="addaction" name="addaction" type="button" value="Go!" />
+      </p>
+    </div>
 
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/dagoba.js"></script>
