moved form above graphic; default date

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -91,11 +91,6 @@
       </p>
     </div>
 
-    <canvas id="ripples" width="900" height="900"></canvas>
-
-
-    <div id="sentences"> </div>
-
     <div id="newaction">
       <p>
         <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" /> <br />
@@ -103,7 +98,7 @@
       </p>
       <p>
         <input id="actiontype" name="actiontype" type="text" value="manage" /> (create, attend, manage, assist, join, leave) <br />
-        <input id="actiondate" name="" type="date" value="" /> (when did it happen?)
+        <input id="actiondate" name="actiondate" type="date" value="2010-10-10" /> (when did it happen?)
       </p>
       <p>
         <input id="thing2name" name="thing2name" type="text" value="Thing 2 name" /> <br />
@@ -113,6 +108,12 @@
         <input id="addaction" name="addaction" type="button" value="Go!" />
       </p>
     </div>
+
+
+    <canvas id="ripples" width="900" height="900"></canvas>
+
+
+    <div id="sentences"> </div>
 
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/dagoba.js"></script>
