--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -94,15 +94,40 @@
     <div id="newaction">
       <p>
         <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" /> <br />
-        <input id="thing1type" name="thing1type" type="text" value="person" /> (person, org, event, outcome, place)
+        <!--         <input id="thing1type" name="thing1type" type="text" value="person" /> (person, org, event, outcome, place) -->
+        <select id="thing1type" name="thing1type">
+          <option value="person">person</option>
+          <option value="org">org</option>
+          <option value="event">event</option>
+          <option value="outcome">outcome</option>
+          <option value="place">place</option>
+        </select>
       </p>
       <p>
-        <input id="actiontype" name="actiontype" type="text" value="manage" /> (create, attend, manage, assist, join, leave) <br />
-        <input id="actiondate" name="actiondate" type="date" value="2010-10-10" /> (when did it happen?)
+        <!--         <input id="actiontype" name="actiontype" type="text" value="manage" /> (create, attend, manage, assist, join, leave) <br /> -->
+        did
+        <select id="actiontype" name="actiontype">
+          <option value="create">create</option>
+          <option value="attend">attend</option>
+          <option value="manage">manage</option>
+          <option value="assist">assist</option>
+          <option value="join">join</option>
+          <option value="leave">leave</option>
+        </select>
+        ( during
+        <input id="actiondate" name="actiondate" type="date" value="2010-10-10" />
+        )
       </p>
       <p>
         <input id="thing2name" name="thing2name" type="text" value="Thing 2 name" /> <br />
-        <input id="thing2type" name="thing2type" type="text" value="person" /> (person, org, event, outcome, place)
+        <!--         <input id="thing2type" name="thing2type" type="text" value="person" /> (person, org, event, outcome, place) -->
+        <select id="thing2type" name="thing2type">
+          <option value="person">person</option>
+          <option value="org">org</option>
+          <option value="event">event</option>
+          <option value="outcome">outcome</option>
+          <option value="place">place</option>
+        </select>
       </p>
       <p>
         <input id="addaction" name="addaction" type="button" value="Go!" />
