filtering for sentences based on current year

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -88,6 +88,7 @@
       'n' for next year <br />
       'a' for all edges <br />
       's' for some edges <br />
+      'f' for filter toggle <br />
     </p>
 
     <div id="newaction">
