adding present to list

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -111,6 +111,7 @@
           <option value="attend">attend</option>
           <option value="manage">manage</option>
           <option value="assist">assist</option>
+          <option value="present">present</option>
           <option value="join">join</option>
           <option value="leave">leave</option>
         </select>
