longer inputs, fewer parens

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -93,7 +93,7 @@
 
     <div id="newaction">
       <p>
-        <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" /> <br />
+        <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" size="40" /> <br />
         <!--         <input id="thing1type" name="thing1type" type="text" value="person" /> (person, org, event, outcome, place) -->
         <select id="thing1type" name="thing1type">
           <option value="person">person</option>
@@ -117,7 +117,7 @@
         </select>
       </p>
       <p>
-        <input id="thing2name" name="thing2name" type="text" value="Thing 2 name" /> <br />
+        <input id="thing2name" name="thing2name" type="text" value="Thing 2 name" size="40" /> <br />
         <!--         <input id="thing2type" name="thing2type" type="text" value="person" /> (person, org, event, outcome, place) -->
         <select id="thing2type" name="thing2type">
           <option value="person">person</option>
@@ -128,9 +128,8 @@
         </select>
       </p>
       <p>
-        ( during
+        during
         <input id="actiondate" name="actiondate" type="date" value="2010-10-10" />
-        )
       </p>
       <p>
         <input id="addaction" name="addaction" type="button" value="Go!" />
