filter fix hack; stylistic improvements

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Welcome to ripplemapping</title>
+    <title>Digital Justice and the AMC</title>
     <meta charset="UTF-8">
 
     <style type="text/css">
@@ -80,7 +80,8 @@
   </head>
   <body>
 
-    <h1> Welcome to ripplemapping </h1>
+    <!-- <h1> Welcome to ripplemapping </h1> -->
+    <h1> Digital Justice and the AMC </h1>
 
     <p id="legend">
       Keys: <br />
@@ -128,7 +129,8 @@
       </p>
       <p>
         on
-        <input id="actiondate" name="actiondate" type="date" value="2010-10-10" />
+        <input id="actiondate" name="actiondate" type="date" value="2010-01-01" />
+        (approximate)
       </p>
       <p>
         <input id="addaction" name="addaction" type="button" value="Go!" />
