Title change (again)

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -81,7 +81,8 @@
   <body>
 
     <!-- <h1> Welcome to ripplemapping </h1> -->
-    <h1> Digital Justice and the AMC </h1>
+    <!--     <h1> Digital Justice and the AMC </h1> -->
+    <h1>The ripple effect of 'A Healthy Digital Ecology: Creating a Community Vision for Federal Funding' at AMC 2009</h1>
 
     <p id="legend">
       Keys: <br />
