header size change

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -6,6 +6,11 @@
 
     <style type="text/css">
       @import url(css/style.css);
+
+      h1 {
+        font-size: 30px;
+      }
+
       .background {
         stroke: white;
         stroke-width: 1px;
