Story form title bar

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -99,6 +99,7 @@
     </p>
 
     <form id="newaction">
+      <p>Please tell us more about this story.</p>
       <p>
         <input id="thing1name" name="thing1name" type="text" value="Thing 1 name" size="40" /> <br />
         <!--         <input id="thing1type" name="thing1type" type="text" value="person" /> (person, org, event, outcome, place) -->
