key text update

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -93,8 +93,8 @@
       Keys: <br />
       'p' for previous year <br />
       'n' for next year <br />
-      'a' for all edges <br />
-      's' for some edges <br />
+      'a' for all connections <br />
+      's' for show most recent connections <br />
       'f' for filter stories by year <br />
     </p>
 
