--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -96,6 +96,7 @@
       'a' for all connections <br />
       's' for show most recent connections <br />
       'f' for filter stories by year <br />
+      'l' for legend edges <br />
     </p>
 
     <form id="newaction">
