first stage of new form imported silly jQ-based autocompleter :/

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -4,6 +4,8 @@
     <title>Digital Justice and the AMC</title>
     <meta charset="UTF-8">
 
+<link rel="stylesheet" href="css/example.css">
+
     <style type="text/css">
       @import url(css/style.css);
 
@@ -89,6 +91,11 @@
     <!--     <h1> Digital Justice and the AMC </h1> -->
     <h1>The ripple effect of 'A Healthy Digital Ecology: Creating a Community Vision for Federal Funding' at AMC 2009</h1>
 
+    <div id="the-basics">
+      <input class="typeahead" type="text" placeholder="A thing">
+    </div>
+
+
     <p id="legend">
       Keys: <br />
       'p' for previous year <br />
@@ -166,6 +173,11 @@
     <p>Click any story to edit</p>
 
     <div id="sentences"> </div>
+
+    <!--     this is just here for the autocomplete :/ -->
+    <script type="text/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="../bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+
 
     <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/dagoba.js"></script>
