first stab at conversations

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -64,12 +64,7 @@
     <!--     <h1> Digital Justice and the AMC </h1> -->
     <h1>The ripple effect of 'A Healthy Digital Ecology: Creating a Community Vision for Federal Funding' at AMC 2009</h1>
 
-    <div id="the-conversation">
-      <p>
-        This is a story all about how <span id="subject"></span>
-      </p>
-      <div id="the-form"></div>
-    </div>
+    <form id="the-conversation"></form>
 
 
     <canvas id="ripples" width="900" height="900"></canvas>
