--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -4,10 +4,16 @@
     <title>Digital Justice and the AMC</title>
     <meta charset="UTF-8">
 
-<link rel="stylesheet" href="css/example.css">
+    <link rel="stylesheet" href="css/example.css">
 
     <style type="text/css">
       @import url(css/style.css);
+
+      #the-conversation {
+        font-size: 28px;
+        line-height: 30px;
+        margin: 20px 0px;
+      }
 
       h1 {
         font-size: 24px;
