staging vendor js

--- a/sketches/ripplemap.html
+++ b/sketches/ripplemap.html
@@ -153,8 +153,8 @@
     <div id="sentences"> </div>
 
     <!--     this is just here for the autocomplete :/ -->
-    <script type="text/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="../bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/typeahead.bundle.js"></script>
 
 
     <script type="text/javascript" src="js/data.js"></script>
